--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-pydantic==2.5.3
-pydantic[email]==2.5.3
-passlib[bcrypt]==1.7.4
-argon2-cffi==23.1.0
-python-jose[cryptography]==3.3.0
-python-dotenv==1.0.0
-boto3==1.34.14
-pyyaml==6.0.1
+fastapi
+uvicorn[standard]
+sqlalchemy
+psycopg2-binary
+pydantic
+pydantic[email]
+passlib[bcrypt]
+argon2-cffi
+python-jose[cryptography]
+python-dotenv
+boto3
+pyyaml
 python-multipart
