made the frontend compatible with https

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 
-VITE_API_BASE=http://74.241.248.23:8000
+VITE_API_BASE= https://joe-costume-bullet-illustrations.trycloudflare.com
 # VITE_API_BASE=https://service-observability-platform-production.up.railway.app
 # VITE_API_BASE=http://localhost:8000
